# westgate

./: .dockerignore  .gitignore  Dockerfile  Westgate.postman_collection.json  app.py  compose.yaml  docker commands.txt  dvc.yaml  fly.toml  flyctl workflows.txt  mlruns.db  modelbit.ipynb  modelbit_inference.ipynb  pyproject.toml  requirements.txt  sample_request.txt  thresholds.txt  train_default_model.py
.dvc/: config
default_model/: X_test-default_1.0.csv  create_monthly_training_data_default.ipynb  default.ipynb  default_1.0.ipynb  default_1.1.ipynb  default_model.dill.dvc  default_model.ipynb  dvc.yaml  feature_importance.csv  features_default.csv  features_default_1.0.csv  features_default_1.1.csv  mlruns.db  readme.txt  test_default_model.py  train_default_model.py
dvclive/: metrics.json
graveyard/: test_supabase.ipynb
notebooks/: app_request.ipynb  backtest_refusals.ipynb  cols_combined.txt  combined_irr.ipynb  combined_models.ipynb  debug.ipynb  feature_selection_default.ipynb  feature_selection_refusal.ipynb  if_irr.ipynb  presto_irr.ipynb  shap.ipynb  test_supabase.ipynb  tests.ipynb
refusal_model/: X_test-refusal_0.2.csv  backtest_refusals.ipynb  cases_to_investigate.csv  changelog.txt  eda.ipynb  features_refusal.csv  features_refusal_0.2.csv  mlruns.db  refusal.ipynb  refusal_model.dill.dvc  refusal_model.ipynb  test_refusal_model.ipynb  test_refusal_model.py  train_refusal_model.py
westgate/: auto_refuse.py  combochart.py  feature_eng.py  flaml_default_model.py  flaml_model.py  (+4 more)
westgate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+16 files in other folders)
