[project]
name = "westgate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colored==2.2.4",
    "dill==0.3.8",
    "fastapi==0.110.0",
    "flaml==2.1.1",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "pandas==2.2.1",
    "plotly==5.18.0",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn==1.3.2",
    "supabase==2.4.3",
    "uvicorn==0.29.0",
    "xgboost==2.0.3",
]
